prometheus/k8s/normal/prometheus/prometheus.svc.yml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 9090
  selector:
    app: prometheus
